--- a/grails-app/assets/stylesheets/sass/partials/_variable.scss
+++ b/grails-app/assets/stylesheets/sass/partials/_variable.scss
@@ -48,3 +48,4 @@ $base-color-gery-light:#bcbec0;
 $base-color-red-stroke:#e82831;
 $base-color-active: #b3b3b3;
 $base-color-warn: #355d6f;
+$base-color-orange: #fdbc24;
